scss/pages/_page-product.scss
@import '../utilities/variables';
@import '../utilities/components/button-black-cta';

.single-product-page {
  @media (min-width: $screen-size-desktop) {
    padding-top: 30px;
  }

  .reset_variations,
  .quantity,
  .wd-attr-selected,
  .product-tabs-wrapper {
    display: none !important;
  }

  .product-images {
    padding: 0;
    margin-bottom: 0;

    .product-image-wrap {
      padding: 0;
    }

    .owl-prev {
      left: 15px;
    }

    .owl-next {
      right: 15px
    }
  }

  .thumbnails {
    display: none;

    @media (min-width: $screen-size-desktop) {
      display: flex;
    }
  }

  .product_title {
    font-family: $font-family-montserrat;
    color: $color-text;
    font-size: 18px;
    letter-spacing: 1.8px;
    line-height: 1.8;
    font-weight: 500;
    text-transform: uppercase;
    margin-top: 35px;
    margin-bottom: 20px;
    padding: 0 20px;

    @media (min-width: $screen-size-desktop) {
      margin-top: 20px;
    }
  }

  .summary-inner {
    .price {
      margin-bottom: 40px;

      .amount {
        font-size: 18px;
        letter-spacing: 1.4px;
      }
    }
  }

  .woocommerce-product-details__short-description {
    padding: 0 20px;
    font-family: $font-family-nunito;
    font-size: 16px;
    letter-spacing: 0.32px;
    font-weight: 300;
  }

  li {
    &::before {
      display: none;
    }
  }

  .stock {
    &.out-of-stock {
      text-align: center;
    }

    &.in-stock {
      text-align: center;
      font-weight: 500;
      color: $color-success;

      &::before {
        color: $color-success;
      }
    }
  }

  tr {
    margin: 20px;
  }

  .variations_form {
    .variations {
      label {
        font-size: 16px;
        font-family: $font-family-montserrat;
        letter-spacing: 1.3px;
        font-weight: 500;
        margin-bottom: 10px;

        &:after {
          display: none;
        }
      }
    }
  }

  .single_add_to_cart_button {
    @extend .button-black-cta;
    margin-top: 40px;

    @media (min-width: $screen-size-desktop) {
      margin-top: 20px;
    }
  }
}

